--- a/orderform.html
+++ b/orderform.html
@@ -5,10 +5,28 @@
 
 
 <body>
-<form action="processorder.php",method="post">
+<form action="processorder.php" method="post">
 <table>
+<tr>
+<td bgcolor="yellow" width="150" align="center">Item</td>
+<td bgcolor="yellow" align="center">Quantity</td>
+</tr>
+<tr>
+<td bgcolor="cyan" width="150" align=center>Tires</td>
+<td><input type="text" name="tires" maxlength="5"></td>
 
-
+</tr>
+<tr>
+<td width="150" bgcolor="green" align="center">Oil</td>
+<td>n<input type="text" name="oil" maxlength="5"></td>
+</tr>
+<tr>
+<td width="150" bgcolor="blue" align="center">Spark Plugs</td>
+<td><input type="text" name="sparks" maxlength="5"></td>
+</tr>
+<tr>
+<td align="center"><input type="submit" value="submit order"></td>
+</tr>
 </table>
 
 
